test/pass/valid_then_nil_ret.ly
<@lily

method ret_str():str { return "str" }
method ret_nil_str():str { str s    return s }

ret_str()
ret_nil_str()

@>
