test/fail/invalid_compare.ly
<@lily
list[integer] a = [1]
list[str] b = ["a"]
if a == b: {
}
@>